[metadata]
name = openstack
summary = Tempest plugin senlin_tempest_plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/senlin/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    senlin_tempest_plugin

[build_sphinx]
all_files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = senlin_tempest_plugin/locale
domain = senlin_tempest_plugin

[update_catalog]
domain = senlin_tempest_plugin
output_dir = senlin_tempest_plugin/locale
input_file = senlin_tempest_plugin/locale/senlin_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = senlin_tempest_plugin/locale/senlin_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    senlin_tests = senlin_tempest_plugin.plugin:SenlinTempestPlugin

