[metadata]
name = senlin-tempest-plugin
summary = Tempest plugin senlin_tempest_plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/senlin/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    senlin_tempest_plugin

[entry_points]
tempest.test_plugins =
    senlin-tempest-plugin = senlin_tempest_plugin.plugin:SenlinTempestPlugin
